/*
 *  Copyright 2019 Google Inc. All Rights Reserved.
 *
 *  Licensed under the Apache License, Version 2.0 (the "License");
 *  you may not use this file except in compliance with the License.
 *  You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 *  Unless required by applicable law or agreed to in writing, software
 *  distributed under the License is distributed on an "AS IS" BASIS,
 *  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 *  See the License for the specific language governing permissions and
 *  limitations under the License.
 */

syntax = "proto2";

package goosci;
option java_package = "com.google.android.apps.forscience.whistlepunk.data";
option java_outer_classname = "GoosciSensorSpec";
option objc_class_prefix = "GSJ";
option optimize_for = LITE_RUNTIME;

import "third_party/sciencejournal/ios/Protos/basic_sensor_appearance.proto";
import "third_party/sciencejournal/ios/Protos/gadget_info.proto";

// Specification of an observable sensor.
// Added in V2
message SensorSpec {
    // Provider, address, hostid, etc.
    optional GadgetInfo info = 1;

    // Opaque to Science Journal, but meaningful to each SensorDiscoverer.
    // Each SensorDiscoverer can place whatever proto it wants here that contains all the
    // information it needs, beyond the address, to connect to, configure,
    // and relay data from a particular sensor in a particular configuration.
    optional bytes config = 2;

    // contains all of the data necessary to display a sensor as part of a trial
    optional BasicSensorAppearance rememberedAppearance = 3;
};